welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:2: error: Invalid literal number
for(nbPas<-1to6) {avance();} 
           ^Program:4: error: ')' expected but '}' found.
	}
        ^